--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon routes/index.js"
+    "start": "nodemon routes/index.js",
+    "dev": "tailwindcss -i ./styles/style.css -o ./styles/output.css --watch"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,7 +13,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^8.2.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
