--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "http-errors": "~1.6.3",
     "mongoose": "^8.2.0",
     "morgan": "~1.9.1",
-    "tailwind": "^4.0.0"
+    "postcss": "^8.4.35",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
     "nodemon": "^3.1.0"
   }
 }
