--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "kill": "npx kill-port 3000",
     "start": "nodemon routes/index.js",
+    "test": "jest",
     "dev": "tailwindcss -i ./public/styles/style.css -o ./public/styles/output.css --watch"
   },
   "dependencies": {
@@ -15,11 +17,14 @@
     "mongoose": "^8.2.0",
     "morgan": "~1.9.1",
     "postcss": "^8.4.35",
+    "superset": "^2.0.1",
+    "supertest": "^6.3.4",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0"
   }
 }
