--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,12 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests
-        run: npm test
+      - name: Build Docker image
+        run: |
+          docker build -t car2 .
+          echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+          docker tag car2 docker.pkg.github.com/${{ github.repository }}/car2:${{ github.sha }}
+          docker push docker.pkg.github.com/${{ github.repository }}/car2:${{ github.sha }}
+
+      - name: Run tests with Docker
+        run: docker run car2 npm test
