--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t car2 .
-          echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+          echo ${{ secrets.CAR_TOKEN_SECRET }} | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
           docker tag car2 docker.pkg.github.com/ceraa04/car-ecommerce/car2:${{ github.sha }}
           docker push docker.pkg.github.com/ceraa04/car-ecommerce/car2:${{ github.sha }}
       
