--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,14 @@
 			"script": "start",
 			"problemMatcher": [],
 			"label": "npm: start",
-			"detail": "nodemon routes/index.js"
+			"detail": "nodemon routes/app.js"
+		},
+		{
+			"type": "npm",
+			"script": "dev",
+			"problemMatcher": [],
+			"label": "npm: dev",
+			"detail": "tailwindcss -i ./public/styles/style.css -o ./public/styles/output.css --watch"
 		}
 	]
 }
