--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "private": true,
   "scripts": {
     "kill": "npx kill-port 3000",
-    "start": "nodemon routes/index.js",
+    "start": "nodemon routes/app.js",
     "test": "jest",
     "dev": "tailwindcss -i ./public/styles/style.css -o ./public/styles/output.css --watch"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
     "mongoose": "^8.2.0",
     "morgan": "~1.9.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "postcss": "^8.4.35",
     "superset": "^2.0.1",
     "supertest": "^6.3.4",
