--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "tailwindcss -i ./public/styles/style.css -o ./public/styles/output.css --watch"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
