--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
     "routes": [
         {
-            "src": "/[^.]+",
+            "src": "/",
             "dest": "/",
-            "status": 200
         }
     ]
 }
