--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,14 @@
 {
+    "version": 2,
+    "builds": [
+        {
+            "src": "./src/api/index.js",
+            "use": "@vercel/node"
+        }
+    ],
     "routes": [
         {
-            "src": "/",
+            "src": "/(.*)",
             "dest": "/"
         }
     ]
